--- a/proportal/views/pages/browse/data_type.tt
+++ b/proportal/views/pages/browse/data_type.tt
@@ -23,7 +23,7 @@
 [%			FOREACH s IN genomes.$es %]
 				<li>
 				<input type="checkbox" class="sample-data__cbox" name="taxon_oid[]" value="[% s.taxon_oid %]" id="cbox_[% s.taxon_oid %]" />
-				<a href="[% link( 'taxon_details', { taxon_oid => s.taxon_oid } ) %]">[% s.taxon_display_name %]</a> <a href="[% link( 'jbrowse', { taxon_oid => s.taxon_oid } ) %]">JBrowse</a></li>
+				<a href="[% link( 'details', { type => 'taxon', taxon_oid => s.taxon_oid } ) %]">[% s.taxon_display_name %]</a> <a href="[% link( 'jbrowse', { taxon_oid => s.taxon_oid } ) %]">JBrowse</a></li>
 [%			END %]
 			</ul>
 		</li>
@@ -42,7 +42,7 @@
 [%			FOREACH m IN metagen.$es %]
 				<li>
 				<input type="checkbox" class="sample-data__cbox" name="taxon_oid[]" value="[% m.taxon_oid %]" id="cbox_[% m.taxon_oid %]" />
-				<a href="[% link( 'taxon_details', { taxon_oid => m.taxon_oid } ) %]">[% m.taxon_display_name %]</a></li>
+				<a href="[% link( 'details', { type => 'taxon', taxon_oid => m.taxon_oid } ) %]">[% m.taxon_display_name %]</a></li>
 [%			END %]
 			</ul>
 		</li>
