--- a/proportal/views/inc/message.tt
+++ b/proportal/views/inc/message.tt
@@ -5,4 +5,5 @@
 		'<p class="site-message__p">' _ settings.message _ '</p>';
 	END;
 %]
+	<p>The IMG/ProPortal is being updated at present and may not function as expected.</p>
 </div>
