--- a/proportal/views/layouts/contents_only.tt
+++ b/proportal/views/layouts/contents_only.tt
@@ -20,7 +20,13 @@
 <!-- template: [% template.name %] -->
 <div class="wrapper">
 	<article class="content cf full" role="main">
-[%	content	    # the page content %]
+[%
+#	IF settings.message;
+		PROCESS 'inc/message.tt';
+#	END;
+	content;	# the page content
+
+%]
 	</article>
 </div>
 [%	IF settings.debug;
