--- a/proportal/views/layouts/default_wide.tt
+++ b/proportal/views/layouts/default_wide.tt
@@ -28,9 +28,9 @@
 %]
 	<article class="content cf full" role="main">
 [%
-	IF settings.message;
+#	IF settings.message;
 		PROCESS 'inc/message.tt';
-	END;
+#	END;
 	content;	# the page content
 
 %]
