--- a/proportal/views/pages/api_home.tt
+++ b/proportal/views/pages/api_home.tt
@@ -8,8 +8,8 @@
 [%	FOREACH q IN queries.sort %]
 	<li><a href="/api/proportal/[% q %]">[% q %]</a>
 		<ul>
-[%		FOREACH s IN apps.$q.controller.valid_filters.subset.enum %]
-			<li>subset: <a href="/api/proportal/[% q %]/[% s %]">[% s %]</a></li>
+[%		FOREACH s IN apps.$q.controller.valid_filters.pp_subset.enum %]
+			<li>pp_subset: <a href="/api/proportal/[% q %]/[% s %]">[% s %]</a></li>
 [%		END; %]
 		</ul>
 	</li>
