--- a/proportal/views/pages/details/taxon.tt
+++ b/proportal/views/pages/details/taxon.tt
@@ -16,7 +16,7 @@
 			</h4>
 
 			<!-- Write genome name -->
-			<h2>[% self.display_name %]</h2>
+			<h2>[% self.taxon_display_name %]</h2>
 		</div>
 		<div id="buttonBar">
 			<button>Add to Cart</button>
@@ -301,6 +301,7 @@
 <div class="row">
 	<div class="infoBox">
 		<div class="infoBoxTitle"><h4>Gene Information</h4></div>
+<p>Please note that these links are currently under development and do not function.</p>
 
 		<table>
 <tbody>
@@ -308,37 +309,37 @@
 <td>
 Total Genes
 </td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid } ) %]">[% self.taxon_stats.total_gene_count %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid } ) %]">[% self.taxon_stats.total_gene_count %]</a></td>
 </tr>
 
 <tr>
 <td>Protein Coding Genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'proteinCodingGenes' } ) %]">[% self.taxon_stats.cds_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'proteinCodingGenes' } ) %]">[% self.taxon_stats.cds_genes %]</a></td>
 </tr>
 
 <tr>
 <td>Genes with functional prediction</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'withFunc' } ) %]">[% self.taxon_stats.genes_w_func_pred %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'withFunc' } ) %]">[% self.taxon_stats.genes_w_func_pred %]</a></td>
 </tr>
 
 <tr>
 <td>Genes without functional prediction</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'withoutFunc' } ) %]">[% self.taxon_stats.cds_genes - self.taxon_stats.genes_w_func_pred %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'withoutFunc' } ) %]">[% self.taxon_stats.cds_genes - self.taxon_stats.genes_w_func_pred %]</a></td>
 </tr>
 
 <tr>
 <td>Fused protein coding genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'fusedGenes' } ) %]">[% self.taxon_stats.fused_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'fusedGenes' } ) %]">[% self.taxon_stats.fused_genes %]</a></td>
 </tr>
 
 <tr>
 <td>Coding signal proteins</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'signalpGeneList' } ) %]">[% self.taxon_stats.genes_signalp %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'signalpGeneList' } ) %]">[% self.taxon_stats.genes_signalp %]</a></td>
 </tr>
 
 <tr>
 <td>Coding transmembrane proteins</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'transmembraneGeneList' } ) %]">[% self.taxon_stats.genes_transmembrane %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'transmembraneGeneList' } ) %]">[% self.taxon_stats.genes_transmembrane %]</a></td>
 </tr>
 </tbody>
 
@@ -349,12 +350,12 @@ Total Genes
 
 <tr>
 <td>RNA Genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'rnas' } ) %]">[% self.taxon_stats.rna_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'rnas' } ) %]">[% self.taxon_stats.rna_genes %]</a></td>
 </tr>
 
 <tr>
 <td>rRNA Genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, locus_type => 'rRNA' } ) %]">[% self.taxon_stats.rrna_genes
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'rRNA' } ) %]">[% self.taxon_stats.rrna_genes
 	# + self.taxon_stats.its_annotation_or_whatever %]</a></td>
 </tr>
 
@@ -365,27 +366,27 @@ Total Genes
 
 <tr>
 <td>5S rRNA genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, locus_type => 'rRNA', gene_symbol => '5S' } ) %]">[% self.taxon_stats.rrna5s_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'rRNA', gene_symbol => '5S' } ) %]">[% self.taxon_stats.rrna5s_genes %]</a></td>
 </tr>
 
 <tr>
 <td>16S rRNA genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, locus_type => 'rRNA', gene_symbol => '16S' } ) %]">[% self.taxon_stats.rrna16s_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'rRNA', gene_symbol => '16S' } ) %]">[% self.taxon_stats.rrna16s_genes %]</a></td>
 </tr>
 
 <tr>
 <td>23S rRNA genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, locus_type => 'rRNA', gene_symbol => '23S' } ) %]">[% self.taxon_stats.rrna23s_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'rRNA', gene_symbol => '23S' } ) %]">[% self.taxon_stats.rrna23s_genes %]</a></td>
 </tr>
 
 <tr>
 <td>tRNA genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, locus_type => 'tRNA' } ) %]">[% self.taxon_stats.trna_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'tRNA' } ) %]">[% self.taxon_stats.trna_genes %]</a></td>
 </tr>
 
 <tr>
 <td>other RNA genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, locus_type => 'xRNA' } ) %]" onclick="">[% self.taxon_stats.other_rna_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'xRNA' } ) %]">[% self.taxon_stats.other_rna_genes %]</a></td>
 </tr>
 
 </tbody>
@@ -393,7 +394,7 @@ Total Genes
 <tbody>
 <tr>
 <td>Pseudo Genes</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, is_pseudogene => 'Yes' } ) %]">[% self.taxon_stats.pseudo_genes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, is_pseudogene => 'Yes' } ) %]">[% self.taxon_stats.pseudo_genes %]</a></td>
 </tr>
 </tbody>
 
@@ -403,12 +404,12 @@ Total Genes
 <tbody>
 <tr>
 <td>Chromosomal Cassettes</td>
-<td><a href="main.cgi?section=GeneCassette&amp;page=occurrence&amp;taxon_oid=[% self.taxon_oid %]">[% self.taxon_stats.total_cassettes %]</a></td>
+<td><a href="[% link( 'chr_cassette_genes', { taxon_oid => self.taxon_oid } ) %]">[% self.taxon_stats.total_cassettes %]</a></td>
 </tr>
 <tr>
-<td>
+<td>Genes in Chromosomal Cassettes
 </td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'geneCassette' } ) %]">[% self.taxon_stats.genes_in_cassettes %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'geneCassette' } ) %]">[% self.taxon_stats.genes_in_cassettes %]</a></td>
 </tr>
 </tbody>
 
@@ -419,11 +420,11 @@ Total Genes
 <tbody>
 <tr>
 <td>Number of Biosynthetic Clusters</td>
-<td><a href="main.cgi?section=GeneCassette&amp;page=occurrence&amp;taxon_oid=[% self.taxon_oid %]">[% self.taxon_stats.total_cassettes %]</a></td>
+<td><a href="[% link( 'biosyn_cluster_genes', { taxon => self.taxon_oid } ) %]">[% self.taxon_stats.total_biosynthetic %]</a></td>
 </tr>
 <tr>
 <td>Genes in Biosynthetic Clusters</td>
-<td><a href="[% link( 'gene_list', { taxon_oid => self.taxon_oid, type => 'biosynthetic_genes' } ) %]">[% self.taxon_stats.total_biosynthetic %]</a></td>
+<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'biosynthetic_genes' } ) %]">[% self.taxon_stats.genes_in_biosynthetic %]</a></td>
 </tr>
 </tbody>
 
