--- a/proportal/src/css/sass/proportal.scss
+++ b/proportal/src/css/sass/proportal.scss
@@ -34,8 +34,9 @@
 @import "partials/infoBox";
 @import "partials/pageTitle";
 @import "partials/buttonBar";
-@import "partials/pageHeader";
+// @import "partials/pageHeader";
 @import "partials/grid";
+@import "partials/list-page";
 
 // print style
 @import "partials/print";
