--- a/proportal/src/css/sass/partials/_layout.scss
+++ b/proportal/src/css/sass/partials/_layout.scss
@@ -23,6 +23,19 @@ article {
 	}
 }
 
+#pageHeader {
+	display: table;
+	padding: 0 10px;
+	margin-top: 20px;
+	width: 100%;
+}
+
+#main {
+	padding: 0 10px;
+	margin-top: 20px;
+	width: 100%;
+}
+
 @include maxw( $nar- ) {
 
 	#about, #user-guide, #news, .content, #tool-input__section, #tool-info__section {
