--- a/proportal/views/pages/details/taxon.tt
+++ b/proportal/views/pages/details/taxon.tt
@@ -83,7 +83,7 @@
 	<tr><td class="indent2">Coding signal proteins</td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'signalpGeneList' } ) %]">[% self.taxon_stats.genes_signalp %]</a></td></tr>
 	<tr><td class="indent2">Coding transmembrane proteins</td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'transmembraneGeneList' } ) %]">[% self.taxon_stats.genes_transmembrane %]</a></td></tr>
 
-	<tr><td class="indent1"><h6>RNA Genes</h6></td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'rnas' } ) %]"><b>[% self.taxon_stats.rna_genes %]</b></a></td></tr>
+	<tr><td class="indent1"><h6>RNA Genes</h6></td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'rna' } ) %]"><b>[% self.taxon_stats.rna_genes %]</b></a></td></tr>
 	<tr><td class="indent2">rRNA Genes</td>
 		<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'rRNA' } ) %]">[% self.taxon_stats.rrna_genes
 			# + self.taxon_stats.its_annotation_or_whatever %]</a></td>
@@ -95,7 +95,7 @@
 	<tr><td class="indent2">tRNA genes</td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'tRNA' } ) %]">[% self.taxon_stats.trna_genes %]</a></td></tr>
 	<tr><td class="indent2">Other RNA genes</td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, locus_type => 'xRNA' } ) %]">[% self.taxon_stats.other_rna_genes %]</a></td></tr>
 
-	<tr><td class="indent1"><h6>Pseudo Genes</td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, is_pseudogene => 'Yes' } ) %]"><b>[% self.taxon_stats.pseudo_genes %]</b></a></td></tr>
+	<tr><td class="indent1"><h6>Pseudo Genes</td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'pseudogene' } ) %]"><b>[% self.taxon_stats.pseudo_genes %]</b></a></td></tr>
 
 	<tr><td class="indent1"><h6>Chromosomal Cassettes</h6></td>	<td><a href="[% link( 'chr_cassette_genes', { taxon_oid => self.taxon_oid } ) %]"><b>[% self.taxon_stats.total_cassettes %]</b></a></td></tr>
 	<tr><td class="indent2">Genes in Chromosomal Cassettes</td>	<td><a href="[% link( 'list', { type => 'gene', taxon_oid => self.taxon_oid, category => 'geneCassette' } ) %]">[% self.taxon_stats.genes_in_cassettes %]</a></td></tr>
